==> stDstm/Example_STM32F103/W25QXX_Flash_SPI_F103/Src/w25qxx.c <==
#include "w25qxx.h"
#include "string.h"
#include "stdio.h"
#define W25QXX_DUMMY_BYTE        0xA5
#define	W25qxx_Delay(delay)		osDelay(delay)
#include "cmsis_os.h"
#define	W25qxx_Delay(delay)		HAL_Delay(delay)

uint8_t	W25qxx_Spi(uint8_t	Data)
{
	uint8_t	ret;

	HAL_SPI_TransmitReceive(W25QXX_SPI_PTR, &Data, &ret, 1, 100); // spi2


	/*while(!(W25QXX_SPI->SR & SPI_SR_TXE));
	W25QXX_SPI->DR = Data;

	while(!(W25QXX_SPI->SR & SPI_SR_RXNE));
	ret = W25QXX_SPI->DR;*/

	//while((W25QXX_SPI->SR & SPI_SR_BSY));
	//__HAL_SPI_CLEAR_OVRFLAG(&hspi2);

	return ret;
}

void W25qxx_ReadBytes(uint8_t* pBuffer, uint32_t ReadAddr, uint32_t NumByteToRead)
{
	while(w25qxx.Lock == 1)
	W25qxx_Delay(1);

	w25qxx.Lock = 1;

	W25QFLASH_CS_SELECT;

	W25qxx_Spi(W25_FAST_READ);

	if(w25qxx.ID >= W25Q256)
		W25qxx_Spi((ReadAddr & 0xFF000000) >> 24);

	W25qxx_Spi((ReadAddr & 0xFF0000) >> 16);
	W25qxx_Spi((ReadAddr& 0xFF00) >> 8);
	W25qxx_Spi(ReadAddr & 0xFF);
	W25qxx_Spi(0);

	HAL_SPI_Receive(W25QXX_SPI_PTR, pBuffer, NumByteToRead, 2000);

	/*uint16_t i = 0;

	while(NumByteToRead > 0U)
	{
		//while(!(W25QXX_SPI->SR & SPI_SR_TXE));
		W25QXX_SPI->DR = 0;

		while(!(W25QXX_SPI->SR & SPI_SR_RXNE));
		pBuffer[i++] = W25QXX_SPI->DR;
		NumByteToRead--;
	}*/

	W25QFLASH_CS_UNSELECT;

	W25qxx_Delay(1);
	w25qxx.Lock = 0;
}
