==> LIFTOMAN/ch32v203_w25qXX/src/w25qxx.cpp <==
#include "w25qxx.h"
#define W25QXX_DUMMY_BYTE 0xA5

uint8_t W25qxx_Spi(uint8_t Data)
{
    uint8_t ret;

    while (!SPI_I2S_GetFlagStatus(W25QXX_SPI, SPI_I2S_FLAG_TXE));
    W25QXX_SPI->DATAR = Data;

    while (!SPI_I2S_GetFlagStatus(W25QXX_SPI, SPI_I2S_FLAG_RXNE));
    ret = W25QXX_SPI->DATAR;

    //while (SPI_I2S_GetFlagStatus(W25QXX_SPI, SPI_I2S_FLAG_BSY));

    return ret;
}

void W25qxx_ReadBytes(uint8_t* pBuffer, uint32_t ReadAddr, uint32_t NumByteToRead)
{
    while (w25qxx.Lock == 1)
        W25qxx_Delay(1);

    w25qxx.Lock = 1;

    W25QFLASH_CS_SELECT;

    W25qxx_Spi(W25_FAST_READ);

    if (w25qxx.ID >= W25Q256)
        W25qxx_Spi((ReadAddr & 0xFF000000) >> 24);

    W25qxx_Spi((ReadAddr & 0xFF0000) >> 16);
    W25qxx_Spi((ReadAddr & 0xFF00) >> 8);
    W25qxx_Spi(ReadAddr & 0xFF);
    W25qxx_Spi(0);

    uint16_t i = 0;

    while(NumByteToRead > 0U)
    {
        while (!SPI_I2S_GetFlagStatus(W25QXX_SPI, SPI_I2S_FLAG_TXE));  // <- //
        W25QXX_SPI->DATAR = 0;

        while (!SPI_I2S_GetFlagStatus(W25QXX_SPI, SPI_I2S_FLAG_RXNE));
        pBuffer[i++] = W25QXX_SPI->DATAR;
        NumByteToRead--;
    }

    W25QFLASH_CS_UNSELECT;

    W25qxx_Delay(1);
    w25qxx.Lock = 0;
}
